# InteropExperiments

./: .gitignore  README.md
BuildingBlocksSolution/: BuildingBlocksSolution.sln
BuildingBlocksSolution/ClangVisitor/: AstContext.cs  AstLogger.cs  AstLoggerVerbosity.cs  AstVisitor.cs  ClangVisitor.csproj  IAstCustomContext.cs  IAstRootVisitor.cs
BuildingBlocksSolution/ClangVisitor/Leaves/: AstAccessDeclarationVisitor.cs  AstClassDeclarationVisitor.cs  AstFieldDclarationVisitor.cs  AstFunctionDeclarationVisitor.cs  AstMacroDefinitionVisitor.cs  AstTranslationUnitVisitor.cs  IAstLeafVisitor.cs
BuildingBlocksSolution/LibClangConsole/: LibClangConsole.csproj  Program.cs  SimpleParser.cs
BuildingBlocksSolution/LibClangConsole/Samples/: Demo1.txt
InteropSolution/: InteropSolution.sln  nuget.config
InteropSolution/InteropWin32Console/: NativeMethods.json  Program.cs
InteropSolution/NativeToManaged/: Rust.md
InteropSolution/NativeToManaged/CalcComponent/: CalcComponent.csproj  Calculator.cs
InteropSolution/NativeToManaged/ChronoComponent/: Alarm.cs  ChronoComponent.csproj  Echo.cs
InteropSolution/NativeToManaged/CppClientConsole/: CppClientConsole.exe.manifest  CppClientConsole.vcxproj  CppClientConsole.vcxproj.filters  main.cpp  packages.config  pch.h
InteropSolution/NativeToManaged/RustClientConsole/: Cargo.toml
InteropSolution/NativeToManaged/RustClientConsole/bindings/: build.rs
InteropSolution/NativeToManaged/RustClientConsole/src/: RustClientConsole.exe.manifest  main.rs
InteropSolution/NativeToManaged/rust-client-wasm/: Cargo.toml  LICENSE_MIT
InteropWin32Console/: InteropWin32Console.csproj
ManagedLibrary/: ManagedLibrary.sln
ManagedLibrary/EmptyApp/: EmptyApp.csproj  Program.cs
ManagedLibrary/ManagedDataLibrary/: MarshalHelper.cs  QueryCatalog.cs  SimpleClass.cs
ManagedWinRTSolution/: ManagedWinRTSolution.sln  Readme.md  nuget.config
ManagedWinRTSolution/CppClient/: CppClient.cpp  CppClient.vcxproj  CppClient.vcxproj.filters
ManagedWinRTSolution/ManagedClient/: EnumWindowsBenchmark.cs  EnumWindowsPInvoke.cs  ManagedClient.csproj  Program.cs
ManagedWinRTSolution/ManagedClient/Properties/: launchSettings.json
ManagedWinRTSolution/WinNativeUtilities/: RafUtilities.h  Security.cpp  Security.h  Security.idl  WinNativeUtilities.vcxproj  WinNativeUtilities.vcxproj.filters  Windowing.cpp  Windowing.h  Windowing.idl  readme.txt
ManagedWinRTSolution/WinNativeUtilitiesProjection/: WinNativeUtilities-Debug.nuspec  WinNativeUtilities-Release.nuspec  WinNativeUtilitiesProjection.csproj
NativeHosting/: CMakeLists.txt  CMakeSettings.json
NativeHosting/NativeHosting/: CMakeLists.txt  NativeHosting.cpp  NativeHosting.h  config-linux-x64.json  config-win-x64.json  config.json
NativeHosting/NativeHosting/include/: XCoreClrHelper.h  XDynamicLoad.h  XErrors.h  XUtilities.h  Xfilesystem.h  appcontext.h  coreclrhost.h  xconfig.h
WinRTNativeHosting/: WinRTNativeHosting.sln
WinRTNativeHosting/NativeToManaged/CppClientConsole/: CppClientConsole.exe.manifest  CppClientConsole.vcxproj  CppClientConsole.vcxproj.filters  Utilities.h  WinRT.Host.runtimeconfig.json  main.cpp  packages.config  pch.h  readme.txt
WinRTNativeHosting/NativeToManaged/ManagedComponent/: Alarm.cs  Calculator.cs  Echo.cs  ManagedComponent.csproj  QueryCatalog.cs
WinRTNativeHosting/NativeToManaged/PythonClient/: pyclient.py
WinRTNativeHosting/NativeToManaged/RustClientConsole/: Cargo.toml  cd.xml
WinRTNativeHosting/NativeToManaged/RustClientConsole/bindings/: Cargo.toml  build.rs  rust_client_console.exe.manifest
WinRTNativeHosting/NativeToManaged/RustClientConsole/src/: main.rs
WindowsAPISolution/: WindowsAPISolution.sln
WindowsAPISolution/ConsumerConsole/: ConsumerConsole.csproj  Program.cs
WindowsAPISolution/ConsumerConsoleNet3/: ConsumerConsoleNet3.csproj  Program.cs
WindowsAPISolution/ConsumerWPF/: App.xaml  App.xaml.cs  ConsumerWPF.csproj  MainWindow.xaml  MainWindow.xaml.cs
WindowsAPISolution/InteropWin32Console/: InteropWin32Console.csproj  NativeMethods.txt  Program.cs  Utilities.cs
WindowsAPISolution/ShellAction/: IShell.cs  NativeMethods.json  NativeMethods.txt  Program.cs  Shell.cs  ShellAction.csproj
WindowsAPISolution/ShellAction/Properties/: launchSettings.json
WindowsAPISolution/ShellAction/ShellActions/: DesktopWallpaperActions.cs
(+6 files in other folders)
