[package]
name = "bindings"
version = "0.1.0"
authors = ["Raf <raffaeler@vevy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://crates.io/crates/windows

[dependencies]
windows = "0.7.0"

[build-dependencies]
windows = "0.7.0"
